crates/engine/src/parser/oracle_ir/snapshots/engine__parser__oracle_ir__snapshot_tests__batterskull_lowered.snap
---
source: crates/engine/src/parser/oracle_ir/snapshot_tests.rs
expression: "&lowered"
---
{
  "abilities": [
    {
      "kind": "Activated",
      "effect": {
        "type": "Bounce",
        "target": {
          "type": "SelfRef"
        },
        "destination": null
      },
      "cost": {
        "type": "Mana",
        "cost": {
          "type": "Cost",
          "shards": [],
          "generic": 3
        }
      },
      "sub_ability": null,
      "duration": null,
      "description": "{3}: Return ~ to its owner's hand.",
      "target_prompt": null,
      "condition": null,
      "optional_targeting": false,
      "optional": false,
      "forward_result": false
    },
    {
      "kind": "Activated",
      "effect": {
        "type": "Attach",
        "target": {
          "type": "Typed",
          "type_filters": [
            "Creature"
          ],
          "controller": "You",
          "properties": []
        },
        "selection": {
          "at_resolution": {}
        }
      },
      "cost": {
        "type": "Mana",
        "cost": {
          "type": "Cost",
          "shards": [],
          "generic": 5
        }
      },
      "sub_ability": null,
      "duration": null,
      "description": "Equip {5}",
      "target_prompt": null,
      "activation_restrictions": [
        {
          "type": "AsSorcery"
        }
      ],
      "ability_tag": {
        "type": "Equip"
      },
      "condition": null,
      "optional_targeting": false,
      "optional": false,
      "forward_result": false
    }
  ],
  "triggers": [],
  "statics": [
    {
      "mode": "Continuous",
      "affected": {
        "type": "Typed",
        "type_filters": [
          "Creature"
        ],
        "controller": null,
        "properties": [
          {
            "type": "EquippedBy"
          }
        ]
      },
      "modifications": [
        {
          "type": "AddPower",
          "value": 4
        },
        {
          "type": "AddToughness",
          "value": 4
        },
        {
          "type": "AddKeyword",
          "keyword": "Vigilance"
        },
        {
          "type": "AddKeyword",
          "keyword": "Lifelink"
        }
      ],
      "condition": null,
      "affected_zone": null,
      "effect_zone": null,
      "active_zones": [],
      "characteristic_defining": false,
      "description": "Equipped creature gets +4/+4 and has vigilance and lifelink."
    }
  ],
  "replacements": [],
  "extractedKeywords": [
    "LivingWeapon"
  ]
}
