crates/engine/src/parser/oracle_ir/snapshots/engine__parser__oracle_ir__snapshot_tests__birds_of_paradise_ir.snap
---
source: crates/engine/src/parser/oracle_ir/snapshot_tests.rs
expression: "&ir"
---
{
  "items": [
    {
      "id": 0,
      "source": {
        "id": {
          "item": 0,
          "ordinal": 0
        },
        "span": {
          "first_line": 0,
          "last_line": 0,
          "start_byte": 0,
          "end_byte": 6,
          "precision": "Exact",
          "ordinal_within_span": 0
        },
        "fragment": "Flying"
      },
      "node": {
        "Unsupported": {
          "unsupported": {
            "name": "unknown",
            "fragment": "Flying",
            "description": "Flying"
          },
          "min_x_value": 0
        }
      }
    },
    {
      "id": 1,
      "source": {
        "id": {
          "item": 1,
          "ordinal": 0
        },
        "span": {
          "first_line": 1,
          "last_line": 1,
          "start_byte": 7,
          "end_byte": 38,
          "precision": "Exact",
          "ordinal_within_span": 0
        },
        "fragment": "{T}: Add one mana of any color."
      },
      "node": {
        "PreLoweredSpell": {
          "kind": "Activated",
          "effect": {
            "type": "Mana",
            "produced": {
              "type": "AnyOneColor",
              "count": {
                "type": "Fixed",
                "value": 1
              },
              "color_options": [
                "White",
                "Blue",
                "Black",
                "Red",
                "Green"
              ]
            }
          },
          "cost": {
            "type": "Tap"
          },
          "sub_ability": null,
          "duration": null,
          "description": "{T}: Add one mana of any color.",
          "target_prompt": null,
          "condition": null,
          "optional_targeting": false,
          "optional": false,
          "forward_result": false,
          "is_mana_ability": true
        }
      }
    }
  ],
  "source_text": "Flying\n{T}: Add one mana of any color.",
  "card_name": "Birds of Paradise"
}
