crates/engine/src/parser/oracle_ir/snapshots/engine__parser__oracle_ir__snapshot_tests__blunt_the_assault_ir.snap
---
source: crates/engine/src/parser/oracle_ir/snapshot_tests.rs
expression: "&ir"
---
{
  "items": [
    {
      "id": 0,
      "source": {
        "id": {
          "item": 0,
          "ordinal": 0
        },
        "span": {
          "first_line": 0,
          "last_line": 0,
          "start_byte": 0,
          "end_byte": 110,
          "precision": "Exact",
          "ordinal_within_span": 0
        },
        "fragment": "You gain 1 life for each creature on the battlefield. Prevent all combat damage that would be dealt this turn."
      },
      "node": {
        "Spell": {
          "source_text": "You gain 1 life for each creature on the battlefield. Prevent all combat damage that would be dealt this turn.",
          "body": {
            "clauses": [
              {
                "id": 0,
                "source": {
                  "id": {
                    "item": 0,
                    "ordinal": 1
                  },
                  "span": {
                    "first_line": 0,
                    "last_line": 0,
                    "start_byte": 0,
                    "end_byte": 52,
                    "precision": "ChainRelative",
                    "ordinal_within_span": 0
                  },
                  "fragment": "You gain 1 life for each creature on the battlefield"
                },
                "disposition": {
                  "Emit": {
                    "followup": null,
                    "intrinsic": null
                  }
                },
                "parsed": {
                  "effect": {
                    "type": "GainLife",
                    "amount": {
                      "type": "Ref",
                      "qty": {
                        "type": "ObjectCount",
                        "filter": {
                          "type": "Typed",
                          "type_filters": [
                            "Creature"
                          ],
                          "controller": null,
                          "properties": []
                        }
                      }
                    }
                  },
                  "duration": null,
                  "sub_ability": null,
                  "distribute": null,
                  "multi_target": null,
                  "condition": null,
                  "optional": false,
                  "unless_pay": null
                },
                "boundary": "Sentence",
                "condition": null,
                "is_optional": false,
                "opponent_may_scope": null,
                "repeat_for": null,
                "player_scope": null,
                "starting_with": null,
                "delayed_condition": null,
                "prefix_delayed_condition": null,
                "multi_target": null,
                "where_x_expression": null,
                "unless_pay": null
              },
              {
                "id": 1,
                "source": {
                  "id": {
                    "item": 0,
                    "ordinal": 2
                  },
                  "span": {
                    "first_line": 0,
                    "last_line": 0,
                    "start_byte": 54,
                    "end_byte": 109,
                    "precision": "ChainRelative",
                    "ordinal_within_span": 1
                  },
                  "fragment": "Prevent all combat damage that would be dealt this turn"
                },
                "disposition": {
                  "Emit": {
                    "followup": null,
                    "intrinsic": null
                  }
                },
                "parsed": {
                  "effect": {
                    "type": "PreventDamage",
                    "amount": "All",
                    "target": {
                      "type": "Any"
                    },
                    "recipient_scope": {
                      "type": "Single"
                    },
                    "scope": "CombatDamage"
                  },
                  "duration": "UntilEndOfTurn",
                  "sub_ability": null,
                  "distribute": null,
                  "multi_target": null,
                  "condition": null,
                  "optional": false,
                  "unless_pay": null
                },
                "boundary": "Sentence",
                "condition": null,
                "is_optional": false,
                "opponent_may_scope": null,
                "repeat_for": null,
                "player_scope": null,
                "starting_with": null,
                "delayed_condition": null,
                "prefix_delayed_condition": null,
                "multi_target": null,
                "where_x_expression": null,
                "unless_pay": null
              }
            ],
            "kind": "Spell",
            "continuation_kind": null,
            "player_scope_rewrite": "Apply",
            "chain_rounding": null,
            "actor": null,
            "in_trigger": false,
            "repeat_until": null
          },
          "shell": {
            "sub_link": null
          },
          "die_results": [],
          "root_transforms": []
        }
      }
    }
  ],
  "source_text": "You gain 1 life for each creature on the battlefield. Prevent all combat damage that would be dealt this turn.",
  "card_name": "Blunt the Assault"
}
